# cowvin_edu

./: pyproject.toml
backend/: __init__.py  crud.py  database.py
