[tool.poetry]
name = "cowvin-edu"
version = "0.1.0"
description = ""
authors = ["cowvin0 <gabrielpereira00PereiraGabriel@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.111.0,<0.112.0"
psycopg2-binary = ">=2.9.9,<2.10.0"
python-dotenv = ">=1.0.1,<1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
